--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,11 +7,10 @@
     "pages/classification/index"
   ],
   "window": {
-    "backgroundColor": "#F6F6F6",
-    "backgroundTextStyle": "light",
-    "navigationBarBackgroundColor": "#F6F6F6",
+    "navigationBarBackgroundColor": "#39b54a",
     "navigationBarTitleText": "试一下又不掏钱",
-    "navigationBarTextStyle": "black"
+    "navigationStyle": "custom",
+    "navigationBarTextStyle": "white"
   },
   "tabBar": {
     "color": "#a9b7b7",
