--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -44,6 +44,7 @@
   },
   "usingComponents": {
     "b-menu": "/components/menu/index",
-    "b-cell": "/components/cell/index"
+    "b-cell": "/components/cell/index",
+    "b-loading": "/components/loading/index"
   }
 }
