--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -9,7 +9,8 @@
     "pages/func/history/index",
     "pages/combination/index",
     "pages/classification/index",
-    "pages/search/index"
+    "pages/search/index",
+    "pages/test/pictest/index"
   ],
   "window": {
     "navigationBarBackgroundColor": "#39b54a",
@@ -48,5 +49,6 @@
     "b-cell": "/components/cell/index",
     "b-loading": "/components/loading/index",
     "b-header": "/components/header/index"
-  }
+  },
+  "sitemapLocation": "sitemap.json"
 }
